# swagger.json
@@ -1,229 +1,307 @@
 {
-    "swagger": "2.0",
-    "info": {
-        "description": "Description",
-        "version": "1.0.0",
-        "title": "Domain Crawler"
-    },
-    "schemes": ["http"],
-    "paths": {
-        "/domain_data": {
-            "get": {
-                "tags": ["Domain Crawler"],
-                "summary": "Detects technologies and social media used on a domain",
-                "description": "Detects the technology and social media on a domain in real time.",
-                "operationId": "DomainData",
-                "produces": ["application/json"],
-                "parameters": [{
-                    "name": "url",
-                    "in": "query",
-                    "description": "Domain without protocol or path",
-                    "required": true,
-                    "type": "string",
-                    "format": "string"
-                }],
-                "responses": {
-                    "200": {
-                        "description": "successful operation",
-                        "examples": {
-                            "response": {
-                                "domain": "test.com/",
-                                "status_code": 200,
-                                "data": {
-                                    "accounting": [],
-                                    "advertising_newtworks": [],
-                                    "analytics": [],
-                                    "blogs": [],
-                                    "build_ci": [],
-                                    "cache_tools": [],
-                                    "captchas": [],
-                                    "cdn": [],
-                                    "cms": [],
-                                    "comments_systems": [],
-                                    "containers": [],
-                                    "control_systems": [],
-                                    "crm": [],
-                                    "cryptominer": [],
-                                    "database_manager": [],
-                                    "database": [],
-                                    "devtools": [],
-                                    "document_mangment_systems": [],
-                                    "documentation_tools": [],
-                                    "ecommerce": [],
-                                    "editors": [],
-                                    "feed_readers": [],
-                                    "font_script": [],
-                                    "hosting_panels": [],
-                                    "iaas": [],
-                                    "issue_trackers": [],
-                                    "javascript_frameworks": [],
-                                    "javascript_graphics": [],
-                                    "javascript_libraries": [],
-                                    "landingpage_builders": [],
-                                    "livechat": [],
-                                    "lms": [],
-                                    "load_balancers": [],
-                                    "maps": [],
-                                    "marketing_automation": [],
-                                    "media_servers": [],
-                                    "message_boards": [],
-                                    "miscellaneous": [],
-                                    "mobile_frameworks": [],
-                                    "network_devices": [],
-                                    "network_storage": [],
-                                    "operating_systems": [],
-                                    "paas": [],
-                                    "payment_processors": [],
-                                    "paywalls": [],
-                                    "photo_galleries": [],
-                                    "printers": [],
-                                    "programming_languages": [],
-                                    "remote_access": [],
-                                    "reverse_proxy": [],
-                                    "rich_text_editors": [],
-                                    "saas": [],
-                                    "search_engines": [],
-                                    "seo": [],
-                                    "static_site_generator": [],
-                                    "tag_manager": [],
-                                    "user_onboarding": [],
-                                    "video_players": [],
-                                    "web_frameworks": [],
-                                    "web_mail": [],
-                                    "web_server_extentions": [],
-                                    "web_servers": [],
-                                    "webcam": [],
-                                    "widgets": [],
-                                    "wikis": []
-                                }
-                            }
-                        }
-                    },
-                    "422": {
-                        "description": "Domain is not valid or crawlable."
-                    },
-                    "500": {
-                        "description": "Internal server error."
-                    }
+  "swagger": "2.0",
+  "info": {
+    "description": "Description",
+    "version": "1.0.0",
+    "title": "Domain Crawler"
+  },
+  "schemes": ["http"],
+  "paths": {
+    "/domain_data": {
+      "get": {
+        "tags": ["Domain Crawler"],
+        "summary": "Detects technologies and social media used on a domain",
+        "description": "Detects the technology and social media on a domain in real time.",
+        "operationId": "DomainData",
+        "produces": ["application/json"],
+        "parameters": [{
+          "name": "url",
+          "in": "query",
+          "description": "Domain without protocol or path",
+          "required": true,
+          "type": "string",
+          "format": "string"
+        }],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "examples": {
+              "response": {
+                "domain": "test.com/",
+                "status_code": 200,
+                "data": {
+                  "accounting": [],
+                  "advertising_newtworks": [],
+                  "analytics": [],
+                  "blogs": [],
+                  "build_ci": [],
+                  "cache_tools": [],
+                  "captchas": [],
+                  "cdn": [],
+                  "cms": [],
+                  "comments_systems": [],
+                  "containers": [],
+                  "control_systems": [],
+                  "crm": [],
+                  "cryptominer": [],
+                  "database_manager": [],
+                  "database": [],
+                  "devtools": [],
+                  "document_mangment_systems": [],
+                  "documentation_tools": [],
+                  "ecommerce": [],
+                  "editors": [],
+                  "feed_readers": [],
+                  "font_script": [],
+                  "hosting_panels": [],
+                  "iaas": [],
+                  "issue_trackers": [],
+                  "javascript_frameworks": [],
+                  "javascript_graphics": [],
+                  "javascript_libraries": [],
+                  "landingpage_builders": [],
+                  "livechat": [],
+                  "lms": [],
+                  "load_balancers": [],
+                  "maps": [],
+                  "marketing_automation": [],
+                  "media_servers": [],
+                  "message_boards": [],
+                  "miscellaneous": [],
+                  "mobile_frameworks": [],
+                  "network_devices": [],
+                  "network_storage": [],
+                  "operating_systems": [],
+                  "paas": [],
+                  "payment_processors": [],
+                  "paywalls": [],
+                  "photo_galleries": [],
+                  "printers": [],
+                  "programming_languages": [],
+                  "remote_access": [],
+                  "reverse_proxy": [],
+                  "rich_text_editors": [],
+                  "saas": [],
+                  "search_engines": [],
+                  "seo": [],
+                  "static_site_generator": [],
+                  "tag_manager": [],
+                  "user_onboarding": [],
+                  "video_players": [],
+                  "web_frameworks": [],
+                  "web_mail": [],
+                  "web_server_extentions": [],
+                  "web_servers": [],
+                  "webcam": [],
+                  "widgets": [],
+                  "wikis": []
                 }
+              }
             }
-        },
-        "/page_rank": {
-          "get": {
-              "tags": ["Page Rank"],
-              "summary": "Gets the open page rank for up to 100 domains at a time.",
-              "description": "Gets the open page rank for up to 100 domains at a time.",
-              "operationId": "PageRank",
-              "produces": ["application/json"],
-              "parameters": [{
-                  "name": "urls",
-                  "in": "query",
-                  "description": "comma separated",
-                  "required": true,
-                  "type": "string",
-                  "format": "string"
-              }],
-              "responses": {
-                  "200": {
-                      "description": "successful operation",
-                      "examples": {
-                          "response": {
-                              "domain": "test.com/",
-                              "status_code": 200,
-                              "data": {
-                                  "test.com": {
-                                    "page_rank": 100
-                                  }
-                              }
-                          }
-                      }
-                  },
-                  "422": {
-                      "description": "Domain is not valid or crawlable."
-                  },
-                  "500": {
-                      "description": "Internal server error."
-                  }
-              }
+          },
+          "422": {
+            "description": "Domain is not valid or crawlable."
+          },
+          "500": {
+            "description": "Internal server error."
           }
-      },
-      "/dns_info/ns": {
-          "get": {
-              "tags": ["DNS Info"],
-              "summary": "Gets DNS information for a domain.",
-              "description": "Gets DNS information for a domain.",
-              "operationId": "DNSNSInfo",
-              "produces": ["application/json"],
-              "parameters": [{
-                  "name": "url",
-                  "in": "query",
-                  "description": "Domain without protocol or path",
-                  "required": true,
-                  "type": "string",
-                  "format": "string"
-              }],
-              "responses": {
-                  "200": {
-                      "description": "successful operation",
-                      "examples": {
-                          "response": {
-                              "domain": "test.com/",
-                              "status_code": 200,
-                              "data": {
-                                  "test.com": {
-                                    "page_rank": 100
-                                  }
-                              }
-                          }
-                      }
-                  },
-                  "422": {
-                      "description": "Domain is not valid or crawlable."
-                  },
-                  "500": {
-                      "description": "Internal server error."
+        }
+      }
+    },
+    "/page_rank": {
+      "get": {
+        "tags": ["Page Rank"],
+        "summary": "Gets the open page rank for up to 100 domains at a time.",
+        "description": "Gets the open page rank for up to 100 domains at a time.",
+        "operationId": "PageRank",
+        "produces": ["application/json"],
+        "parameters": [{
+          "name": "urls",
+          "in": "query",
+          "description": "comma separated",
+          "required": true,
+          "type": "string",
+          "format": "string"
+        }],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "examples": {
+              "response": {
+                "domain": "test.com/",
+                "status_code": 200,
+                "data": {
+                  "test.com": {
+                    "page_rank": 100
                   }
+                }
               }
+            }
+          },
+          "422": {
+            "description": "Domain is not valid or crawlable."
+          },
+          "500": {
+            "description": "Internal server error."
           }
-      },
-      "/dns_info/cname": {
-          "get": {
-              "tags": ["DNS Info"],
-              "summary": "Gets DNS information for a domain.",
-              "description": "Gets DNS information for a domain.",
-              "operationId": "DNSCNAMEInfo",
-              "produces": ["application/json"],
-              "parameters": [{
-                  "name": "url",
-                  "in": "query",
-                  "description": "Domain without protocol or path",
-                  "required": true,
-                  "type": "string",
-                  "format": "string"
-              }],
-              "responses": {
-                  "200": {
-                      "description": "successful operation",
-                      "examples": {
-                          "response": {
-                              "domain": "test.com/",
-                              "status_code": 200,
-                              "data": {
-                                  "test.com": {
-                                    "page_rank": 100
-                                  }
-                              }
-                          }
-                      }
-                  },
-                  "422": {
-                      "description": "Domain is not valid or crawlable."
-                  },
-                  "500": {
-                      "description": "Internal server error."
+        }
+      }
+    },
+    "/dns_info/ns": {
+      "get": {
+        "tags": ["DNS Info"],
+        "summary": "Gets DNS information for a domain.",
+        "description": "Gets DNS information for a domain.",
+        "operationId": "DNSNSInfo",
+        "produces": ["application/json"],
+        "parameters": [{
+          "name": "url",
+          "in": "query",
+          "description": "Domain without protocol or path",
+          "required": true,
+          "type": "string",
+          "format": "string"
+        }],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "examples": {
+              "response": {
+                "domain": "test.com/",
+                "status_code": 200,
+                "data": {
+                  "test.com": {
+                    "page_rank": 100
                   }
+                }
               }
+            }
+          },
+          "422": {
+            "description": "Domain is not valid or crawlable."
+          },
+          "500": {
+            "description": "Internal server error."
           }
+        }
+      }
+    },
+    "/dns_info/cname": {
+      "get": {
+        "tags": ["DNS Info"],
+        "summary": "Gets DNS information for a domain.",
+        "description": "Gets DNS information for a domain.",
+        "operationId": "DNSCNAMEInfo",
+        "produces": ["application/json"],
+        "parameters": [{
+          "name": "url",
+          "in": "query",
+          "description": "Domain without protocol or path",
+          "required": true,
+          "type": "string",
+          "format": "string"
+        }],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "examples": {
+              "response": {
+                "domain": "test.com/",
+                "status_code": 200,
+                "data": {
+                  "test.com": {
+                    "page_rank": 100
+                  }
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Domain is not valid or crawlable."
+          },
+          "500": {
+            "description": "Internal server error."
+          }
+        }
+      }
+    },
+    "/whois_info/registar": {
+      "get": {
+        "tags": ["WhoIs Info"],
+        "summary": "Gets whois information for a domain.",
+        "description": "Gets whois information for a domain.",
+        "operationId": "whois_registrar_info",
+        "produces": ["application/json"],
+        "parameters": [{
+          "name": "url",
+          "in": "query",
+          "description": "Domain without protocol or path",
+          "required": true,
+          "type": "string",
+          "format": "string"
+        }],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "examples": {
+              "response": {
+                "domain": "test.com/",
+                "status_code": 200,
+                "data": {
+                  "test.com": {
+                    "page_rank": 100
+                  }
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Domain is not valid or crawlable."
+          },
+          "500": {
+            "description": "Internal server error."
+          }
+        }
+      }
+    },
+    "/whois_info/company_name": {
+      "get": {
+        "tags": ["WhoIs Info"],
+        "summary": "Gets whois information for a domain.",
+        "description": "Gets whois information for a domain.",
+        "operationId": "whois_company_info",
+        "produces": ["application/json"],
+        "parameters": [{
+          "name": "url",
+          "in": "query",
+          "description": "Domain without protocol or path",
+          "required": true,
+          "type": "string",
+          "format": "string"
+        }],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "examples": {
+              "response": {
+                "domain": "test.com/",
+                "status_code": 200,
+                "data": {
+                  "test.com": {
+                    "page_rank": 100
+                  }
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Domain is not valid or crawlable."
+          },
+          "500": {
+            "description": "Internal server error."
+          }
+        }
       }
     }
+  }
 }
